# db-performance-testing

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
app/api/src/: enums.py  main.py
app/api/src/db/: __init__.py  base.py  crud.py  deps.py  response_schemas.py  table_models.py
app/api/src/v1/: __init__.py  config.py
app/performance/src/: __init__.py  cli.py  enums.py
app/performance/src/core/: __init__.py
app/performance/src/mock_data/: __init__.py  cli.py  logs.py
app/performance/src/mock_data/banking/: __init__.py
app/performance/src/mock_data/employee/: __init__.py  employee.py  workday.py
app/performance/src/mock_data/insurance/: __init__.py  claims.py  party.py  policies.py  products.py  transactions.py
app/performance/src/mock_data/investments/: __init__.py  holdings.py  portfolios.py  prices.py  securities.py  trades.py
app/performance/src/mock_data/logs/: __init__.py
app/performance/src/mock_data/tpc/: __init__.py  tpc_ds.py  tpc_h.py
app/performance/src/utilities/: __init__.py  bigquery.py  common.py  databricks.py  duckdb.py  iceberg.py  postgres.py  snowflake.py
app/performance/tests/: __init__.py
app/ui/src/: db.py  deps.py  main.py
app/ui/tests/: __init__.py
docs/: home.md
sample_datasets/employee/: departments.csv  job_titles.csv  worker_type.csv
sqls/tcp_ds/: 1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  20.sql  21.sql  22.sql  23.sql  24.sql  25.sql  26.sql  27.sql  28.sql  29.sql  3.sql  30.sql  31.sql  32.sql  33.sql  34.sql  35.sql  36.sql  37.sql  38.sql  39.sql  4.sql  40.sql  41.sql  42.sql  43.sql  44.sql  45.sql  (+59 more)
terraform/modules/: main.tf
terraform/modules/bucket/: bucket-policy.json.tmpl  main.tf
terraform/modules/databricks/: databricks_usage_role.tf
terraform/modules/snowflake/: snowflake_execution_role.tf  variables.tf
